SigmaCodebackup3rdSep/objects/Account_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up fields for account subscription</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Subscriptions</relationshipLabel>
        <relationshipName>Account_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Unit_Price__c * Total_Intervel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>BY yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extend_Amount__c</fullName>
        <label>Extend Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extend_End_Date__c</fullName>
        <label>Extend End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extend_Start_Date__c</fullName>
        <label>Extend Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Renewal_Amount__c</fullName>
        <label>Last Renewal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Discount__c</fullName>
        <label>Max Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Subscription_Duration__c</fullName>
        <label>Max Subscription Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Discount__c</fullName>
        <label>Min Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Min_Subscription_Duration__c</fullName>
        <label>Min Subscription Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <formula>Amount__c -( Amount__c*(Discount__c ))+(Amount__c*( Tax__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Billing_Date__c</fullName>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Unit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Account Subscriptions</relationshipLabel>
        <relationshipName>Account_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owned_Subscription_Duration__c</fullName>
        <label>Previous Subscription Duration</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_End_Date__c</fullName>
        <label>Previous End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Start_Date__c</fullName>
        <label>Previous Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Subscription_Line_Item__r.Product__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account Subscriptions</relationshipLabel>
        <relationshipName>Account_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RenewalComments__c</fullName>
        <label>RenewalComments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <isActive>false</isActive>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                    <isActive>false</isActive>
                    <label>Confirmed</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                    <isActive>false</isActive>
                    <label>Expired</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubId__c</fullName>
        <formula>Subscription_Line_Item__r.Subscription__r.Subscription_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscribe_Date__c</fullName>
        <label>Subscribe Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubscriptionDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>SubscriptionDetail__c</referenceTo>
        <relationshipLabel>Account Subscriptions</relationshipLabel>
        <relationshipName>Account_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Duration__c</fullName>
        <label>Subscription Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>3 Month</fullName>
                </value>
                <value>
                    <fullName>6 Month</fullName>
                </value>
                <value>
                    <fullName>12 Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Line Item</label>
        <referenceTo>Subscription_Line_Item__c</referenceTo>
        <relationshipLabel>Account Subscriptions</relationshipLabel>
        <relationshipName>Account_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Tier__c</fullName>
        <label>Subscription Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Total_Amount__c</fullName>
        <formula>Net_Amount__c / Total_Intervel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Intervel__c</fullName>
        <label>Total Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>next_Billing_Amount__c</fullName>
        <label>Billing Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>subscribedate__c</fullName>
        <label>subscribedate</label>
        <type>Date</type>
    </fields>
    <label>Account Subscription</label>
    <nameField>
        <displayFormat>sub-{0000}</displayFormat>
        <label>Rec Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>